grammars/tree-sitter-java-faces-frontend/grammar.js
    document: $ => prec(2, seq(
      O($._S),
      O($.prolog),
      field('root', $.element),
      repeat($._Misc),
    )),

    ...c.rules,

    _Misc: $ => choice(
      $.PI,
      $.StyleSheetPI,
      $.XmlModelPI,
      $.Comment,
      $._S,
    ),

    facelets_element: $ => elementRule($, $.facelets_empty_element, $.facelets_start_tag, $.facelets_end_tag),
    facelets_start_tag: $ => startTagRule($, $._facelets_start_tag_name),
    facelets_end_tag: $ => endTagRule($, $._facelets_end_tag_name),

    jsf_html_element: $ => elementRule($, $.jsf_html_empty_element, $.jsf_html_start_tag, $.jsf_html_end_tag),
    jsf_html_empty_element: $ => emptyElementRule($, $._jsf_html_start_tag_name),
    namespace_declaration: $ => seq(
      field('name', alias($.namespace_declaration_name, $.attribute_name)),
      $._Eq,
      field('uri', $.AttValue),
    ),

    plain_attribute: $ => seq(
      field('name', alias($.plain_attribute_name, $.attribute_name)),
      $._Eq,
      field('value', $.AttValue),
    ),

    double_quoted_attribute_value: $ => seq(
      '"',
      field('content', repeat(choice(
        $.double_quoted_attribute_text,
        $.escaped_expression_marker,
        $._Reference,
        $.expression_language,
        '#',
        '$',
        '\\',
      ))),
      '"',
    ),

    double_quoted_attribute_text: _ => /[^<&"\\#$]+/,
    escaped_expression_marker: _ => token(/\\[\\#$]/),

    content: $ => repeat1(choice(
      $.CharData,
      $.element,
      $._Reference,
      $.CDSect,
      $.PI,
      $.Comment,
      $.expression_language,
    )),

    expression_language: $ => choice(
      $.deferred_expression,
      $.immediate_expression,
    ),

    deferred_expression: $ => seq(
      '#{',
      elSpace($),
      field('body', $.el_sequence_expression),
      elSpace($),
      '}',
    ),

    immediate_expression: $ => seq(
      '${',
      elSpace($),
      field('body', $.el_sequence_expression),
      elSpace($),
      '}',
    ),

    el_sequence_expression: $ => prec.left(seq(
      $.el_assignment_expression,
      repeat(seq(elToken($, ';'), $.el_assignment_expression)),
    )),

    el_assignment_expression: $ => choice(
      $.el_lambda_expression,
      prec.right(seq(
        field('left', $.el_conditional_expression),
        elToken($, '='),
        field('right', $.el_assignment_expression),
      )),
      $.el_conditional_expression,
    ),

    el_lambda_expression: $ => prec.right(seq(
      field('parameters', $.el_lambda_parameters),
      elToken($, '->'),
      field('body', choice($.el_lambda_expression, $.el_conditional_expression)),
    )),

    el_lambda_parameters: $ => choice(
      $.el_identifier,
      seq(
        '(',
        elSpace($),
        O(seq(
          $.el_identifier,
          repeat(seq(elToken($, ','), $.el_identifier)),
        )),
        elSpace($),
        ')',
      ),
    ),

    el_conditional_expression: $ => choice(
      prec.right(5, seq(
        $.el_or_expression,
        elToken($, '?'),
        field('consequence', $.el_conditional_expression),
        elToken($, ':'),
        field('alternative', $.el_conditional_expression),
      )),
      $.el_or_expression,
    ),

    el_or_expression: $ => prec.left(seq(
      $.el_and_expression,
      repeat(seq(field('operator', elToken($, choice('||', 'or'))), $.el_and_expression)),
    )),

    el_and_expression: $ => prec.left(seq(
      $.el_equality_expression,
      repeat(seq(
        field('operator', elToken($, choice('&&', '&amp;&amp;', 'and'))),
        $.el_equality_expression,
      )),
    )),

    el_equality_expression: $ => prec.left(seq(
      $.el_relational_expression,
      repeat(seq(
        field('operator', elToken($, choice('==', 'eq', '!=', 'ne'))),
        $.el_relational_expression,
      )),
    )),

    el_relational_expression: $ => prec.left(seq(
      $.el_concatenation_expression,
      repeat(seq(
        field('operator', elToken($, choice(
          '<', '&lt;', 'lt',
          '>', '&gt;', 'gt',
          '<=', '&lt;=', 'le',
          '>=', '&gt;=', 'ge',
          'instanceof',
        ))),
        $.el_concatenation_expression,
      )),
    )),

    el_concatenation_expression: $ => prec.left(seq(
      $.el_additive_expression,
      repeat(seq(elToken($, '+='), $.el_additive_expression)),
    )),

    el_additive_expression: $ => prec.left(seq(
      $.el_multiplicative_expression,
      repeat(seq(
        field('operator', elToken($, choice('+', '-'))),
        $.el_multiplicative_expression,
      )),
    )),

    el_multiplicative_expression: $ => prec.left(seq(
      $.el_unary_expression,
      repeat(seq(
        field('operator', elToken($, choice('*', '/', 'div', '%', 'mod'))),
        $.el_unary_expression,
      )),
    )),

    el_unary_expression: $ => choice(
      prec.right(seq(
        field('operator', choice('-', '!', $.el_not_operator, $.el_empty_operator)),
        elSpace($),
        $.el_unary_expression,
      )),
      $.el_value_expression,
    ),

    el_not_operator: _ => token(prec(3, 'not')),
    el_empty_operator: _ => token(prec(3, 'empty')),

    el_value_expression: $ => seq(
      $._el_primary_expression,
      repeat(choice(
        $.el_property_suffix,
        $.el_bracket_suffix,
        $.el_method_arguments,
      )),
    ),

    _el_primary_expression: $ => choice(
      $.el_boolean,
      $.el_null,
      $.el_floating_point,
      $.el_integer,
      $.el_string,
      $.el_function_call,
      $.el_identifier,
      $.el_parenthesized_expression,
      $.el_map_or_set_literal,
      $.el_list_literal,
    ),

    el_parenthesized_expression: $ => seq(
      '(',
      elSpace($),
      $.el_sequence_expression,
      elSpace($),
      ')',
    ),

    el_function_call: $ => prec(1, choice(
      seq(
        field('name', alias($._el_qualified_function_name, $.el_function_name)),
        repeat1($.el_method_arguments),
      ),
      seq(
        field('name', $.el_identifier),
        repeat1($.el_method_arguments),
      ),
    )),

    el_property_suffix: $ => seq(
      elToken($, '.'),
      field('property', $.el_identifier),
    ),

    el_bracket_suffix: $ => seq(
      elToken($, '['),
      field('property', $.el_sequence_expression),
      elToken($, ']'),
    ),

    el_method_arguments: $ => seq(
      elToken($, '('),
      O(seq(
        $.el_sequence_expression,
        repeat(seq(elToken($, ','), $.el_sequence_expression)),
      )),
      elToken($, ')'),
    ),

    el_map_or_set_literal: $ => seq(
      '{',
      elSpace($),
      O(seq(
        $.el_collection_entry,
        repeat(seq(elToken($, ','), $.el_collection_entry)),
      )),
      elSpace($),
      '}',
    ),

    el_collection_entry: $ => seq(
      field('key', $.el_sequence_expression),
      O(seq(elToken($, ':'), field('value', $.el_sequence_expression))),
    ),

    el_list_literal: $ => seq(
      '[',
      elSpace($),
      O(seq(
        $.el_sequence_expression,
        repeat(seq(elToken($, ','), $.el_sequence_expression)),
      )),
      elSpace($),
      ']',
    ),

    el_boolean: _ => token(prec(3, choice('true', 'false'))),
    el_null: _ => token(prec(3, 'null')),

    el_floating_point: _ => token(prec(2, choice(
      /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?/,
      /\.[0-9]+([eE][+-]?[0-9]+)?/,
      /[0-9]+[eE][+-]?[0-9]+/,
    ))),

    el_integer: _ => token(prec(1, /[0-9]+/)),

    el_string: $ => choice(
      seq('"', repeat(choice($.el_double_string_text, $.el_escape_sequence, $._Reference)), '"'),
      seq("'", repeat(choice($.el_single_string_text, $.el_escape_sequence, $._Reference)), "'"),
      seq('&quot;', repeat(choice($.el_encoded_double_string_text, $._Reference)), '&quot;'),
      seq('&apos;', repeat(choice($.el_encoded_single_string_text, $._Reference)), '&apos;'),
    ),

    el_single_string_text: _ => /[^'\\&]+/,
    el_identifier: _ => token(prec(1, /[$A-Z_a-z\u00c0-\u00d6\u00d8-\u00f6\u00f8-\u1fff\u3040-\u318f\u3300-\u337f\u3400-\u3d2d\u4e00-\u9fff\uf900-\ufaff#][$A-Z_a-z0-9\u00c0-\u00d6\u00d8-\u00f6\u00f8-\u1fff\u3040-\u318f\u3300-\u337f\u3400-\u3d2d\u4e00-\u9fff\uf900-\ufaff]*/)),
