grammars/tree-sitter-java-faces-frontend/test/corpus/expression_language.txt
==================
EL literals properties methods and functions
==================

<ui:composition xmlns:ui="jakarta.faces.facelets"
                xmlns:h="jakarta.faces.html"
                xmlns:fn="jakarta.tags.functions">
  <h:outputText value="#{bean.customer.address['city']}" />
  <h:outputText value="#{bean.find('id', 42).name}" />
  <h:outputText value="#{fn:substring(bean.text, 0, 4)}" />
  <h:outputText value="#{true and not false or empty bean.items}" />
  <h:outputText value="#{null == bean.value ? 1.25e2 : -4}" />
</ui:composition>

---

(document
  (facelets_element
    (facelets_start_tag
      (tag_name)
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text))))
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text))))
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text)))))
    (content
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)
                                            (el_property_suffix
                                              (el_identifier))
                                            (el_property_suffix
                                              (el_identifier))
                                            (el_bracket_suffix
                                              (el_sequence_expression
                                                (el_assignment_expression
                                                  (el_conditional_expression
                                                    (el_or_expression
                                                      (el_and_expression
                                                        (el_equality_expression
                                                          (el_relational_expression
                                                            (el_concatenation_expression
                                                              (el_additive_expression
                                                                (el_multiplicative_expression
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_string
                                                                        (el_single_string_text))))))))))))))))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)
                                            (el_property_suffix
                                              (el_identifier))
                                            (el_method_arguments
                                              (el_sequence_expression
                                                (el_assignment_expression
                                                  (el_conditional_expression
                                                    (el_or_expression
                                                      (el_and_expression
                                                        (el_equality_expression
                                                          (el_relational_expression
                                                            (el_concatenation_expression
                                                              (el_additive_expression
                                                                (el_multiplicative_expression
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_string
                                                                        (el_single_string_text))))))))))))))
                                              (el_sequence_expression
                                                (el_assignment_expression
                                                  (el_conditional_expression
                                                    (el_or_expression
                                                      (el_and_expression
                                                        (el_equality_expression
                                                          (el_relational_expression
                                                            (el_concatenation_expression
                                                              (el_additive_expression
                                                                (el_multiplicative_expression
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_integer))))))))))))))
                                            (el_property_suffix
                                              (el_identifier)))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_function_call
                                              (el_function_name)
                                              (el_method_arguments
                                                (el_sequence_expression
                                                  (el_assignment_expression
                                                    (el_conditional_expression
                                                      (el_or_expression
                                                        (el_and_expression
                                                          (el_equality_expression
                                                            (el_relational_expression
                                                              (el_concatenation_expression
                                                                (el_additive_expression
                                                                  (el_multiplicative_expression
                                                                    (el_unary_expression
                                                                      (el_value_expression
                                                                        (el_identifier)
                                                                        (el_property_suffix
                                                                          (el_identifier))))))))))))))
                                                (el_sequence_expression
                                                  (el_assignment_expression
                                                    (el_conditional_expression
                                                      (el_or_expression
                                                        (el_and_expression
                                                          (el_equality_expression
                                                            (el_relational_expression
                                                              (el_concatenation_expression
                                                                (el_additive_expression
                                                                  (el_multiplicative_expression
                                                                    (el_unary_expression
                                                                      (el_value_expression
                                                                        (el_integer)))))))))))))
                                                (el_sequence_expression
                                                  (el_assignment_expression
                                                    (el_conditional_expression
                                                      (el_or_expression
                                                        (el_and_expression
                                                          (el_equality_expression
                                                            (el_relational_expression
                                                              (el_concatenation_expression
                                                                (el_additive_expression
                                                                  (el_multiplicative_expression
                                                                    (el_unary_expression
                                                                      (el_value_expression
                                                                        (el_integer))))))))))))))))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_boolean))))))))
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_not_operator)
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_boolean))))))))))
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_empty_operator)
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_identifier)
                                              (el_property_suffix
                                                (el_identifier))))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_null)))))))
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)
                                            (el_property_suffix
                                              (el_identifier)))))))))))
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_floating_point)))))))))))
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_unary_expression
                                              (el_value_expression
                                                (el_integer))))))))))))))))))))))
      (CharData))
    (facelets_end_tag
      (tag_name))))

==================
EL arithmetic relational and encoded XML operators
==================

<ui:composition xmlns:ui="jakarta.faces.facelets" xmlns:h="jakarta.faces.html">
  <h:outputText value="#{(a + b * c div 2 mod 3) >= 10}" />
  <h:outputText value="#{a &lt; b and b &lt;= c}" />
  <h:outputText value="#{a &gt; b or b &gt;= c}" />
  <h:outputText value="#{a &amp;&amp; b}" />
  <h:outputText value="#{value instanceof Type}" />
  <h:outputText value="#{first += second}" />
</ui:composition>

---

(document
  (facelets_element
    (facelets_start_tag
      (tag_name)
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text))))
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text)))))
    (content
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_parenthesized_expression
                                              (el_sequence_expression
                                                (el_assignment_expression
                                                  (el_conditional_expression
                                                    (el_or_expression
                                                      (el_and_expression
                                                        (el_equality_expression
                                                          (el_relational_expression
                                                            (el_concatenation_expression
                                                              (el_additive_expression
                                                                (el_multiplicative_expression
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_identifier))))
                                                                (el_multiplicative_expression
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_identifier)))
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_identifier)))
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_integer)))
                                                                  (el_unary_expression
                                                                    (el_value_expression
                                                                      (el_integer)))))))))))))))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_integer))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)))))))))
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)))))
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData))
    (facelets_end_tag
      (tag_name))))

==================
EL assignments sequences lambdas and invocation
==================

<ui:composition xmlns:ui="jakarta.faces.facelets" xmlns:h="jakarta.faces.html">
  <h:outputText value="#{total = 1; total = total + 2; total}" />
  <h:outputText value="#{x->x+1}" />
  <h:outputText value="#{(x,y)->x+y}" />
  <h:outputText value="#{((x,y)->x+y)(3,4)}" />
  <h:outputText value="#{items.stream().filter(item->item.active).toList()}" />
</ui:composition>

---

(document
  (facelets_element
    (facelets_start_tag
      (tag_name)
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text))))
      (namespace_declaration
        (attribute_name)
        (AttValue
          (double_quoted_attribute_value
            (double_quoted_attribute_text)))))
    (content
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)))))))))))
                        (el_assignment_expression
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_integer)))))))))))))
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier)))))))))))
                        (el_assignment_expression
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_identifier))))
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_integer)))))))))))))
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
                                        (el_unary_expression
                                          (el_value_expression
                                            (el_identifier))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_lambda_expression
                          (el_lambda_parameters
                            (el_identifier))
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_identifier))))
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_integer)))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_lambda_expression
                          (el_lambda_parameters
                            (el_identifier)
                            (el_identifier))
                          (el_conditional_expression
                            (el_or_expression
                              (el_and_expression
                                (el_equality_expression
                                  (el_relational_expression
                                    (el_concatenation_expression
                                      (el_additive_expression
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_identifier))))
                                        (el_multiplicative_expression
                                          (el_unary_expression
                                            (el_value_expression
                                              (el_identifier)))))))))))))))))))))
      (CharData)
      (jsf_html_element
        (jsf_html_empty_element
          (tag_name)
          (plain_attribute
            (attribute_name)
            (AttValue
              (double_quoted_attribute_value
                (expression_language
                  (deferred_expression
                    (el_sequence_expression
                      (el_assignment_expression
                        (el_conditional_expression
                          (el_or_expression
                            (el_and_expression
                              (el_equality_expression
                                (el_relational_expression
                                  (el_concatenation_expression
                                    (el_additive_expression
                                      (el_multiplicative_expression
